--- a/src/sender.html
+++ b/src/sender.html
@@ -30,7 +30,7 @@
             channelIdType: { value: "str" },
 
             silent: { value: false },
-            slientType: { value: "bool" },
+            silentType: { value: "bool" },
 
             title: { value: ""},
             titleType: {value: "str"},
